@@ -1,6 +1,6 @@
 package mcjty.rftoolsutility.modules.screen.items.modules;
 
-import mcjty.lib.crafting.INBTPreservingIngredient;
+import mcjty.lib.crafting.IComponentsToPreserve;
 import mcjty.lib.varia.CapabilityTools;
 import mcjty.lib.varia.Logging;
 import mcjty.lib.varia.ModuleTools;
@@ -14,6 +14,7 @@ import mcjty.rftoolsutility.modules.screen.modulesclient.ItemStackClientScreenMo
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.component.DataComponentType;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.player.Player;
@@ -27,11 +28,12 @@ import net.minecraft.world.level.block.state.BlockState;
 import javax.annotation.Nonnull;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
-public class InventoryModuleItem extends GenericModuleItem implements INBTPreservingIngredient {
+public class InventoryModuleItem extends GenericModuleItem implements IComponentsToPreserve {
 
     public InventoryModuleItem() {
-        super(RFToolsUtility.setup.defaultProperties().stacksTo(1).defaultDurability(1));
+        super(RFToolsUtility.setup.defaultProperties().stacksTo(1).durability(1));
     }
 
     @Override
@@ -65,11 +67,12 @@ public class InventoryModuleItem extends GenericModuleItem implements INBTPreser
             }
             return InteractionResult.SUCCESS;
         }
-        CompoundTag tagCompound = stack.getTag();
+        // @todo 1.21 data
+        CompoundTag tagCompound = new CompoundTag();//stack.getTag();
         if (tagCompound == null) {
             tagCompound = new CompoundTag();
         }
-        if (CapabilityTools.getItemCapabilitySafe(te).isPresent()) {
+        if (CapabilityTools.getItemCapabilitySafe(te) != null) {
             BlockState state = world.getBlockState(pos);
             Block block = state.getBlock();
             String name = "<invalid>";
@@ -86,7 +89,8 @@ public class InventoryModuleItem extends GenericModuleItem implements INBTPreser
                 Logging.message(player, "Inventory module is cleared");
             }
         }
-        stack.setTag(tagCompound);
+        // @todo 1.21 data
+//        stack.setTag(tagCompound);
         return InteractionResult.SUCCESS;
     }
 
@@ -115,9 +119,9 @@ public class InventoryModuleItem extends GenericModuleItem implements INBTPreser
                 block("monitor").nl();
     }
 
-    // @todo 1.14 implement
     @Override
-    public Collection<String> getTagsToPreserve() {
-        return Collections.emptyList();
+    public Collection<DataComponentType<?>> getComponentsToPreserve() {
+        // @todo 1.21 implement me?
+        return List.of();
     }
 }
